[gd_scene load_steps=35 format=3 uid="uid://dr3xq1arkosus"]

[ext_resource type="Script" path="res://Scripts/Enemies/lostone.gd" id="1_btu1y"]
[ext_resource type="AudioStream" uid="uid://c71jkj6qpoi7y" path="res://Audio/male_hurt7-48124.mp3" id="2_4plcv"]
[ext_resource type="AudioStream" uid="uid://dk3xcb0ry3j7j" path="res://Audio/flamecharge.mp3" id="2_axr34"]
[ext_resource type="Script" path="res://Scripts/enemyaim.gd" id="3_beyl6"]
[ext_resource type="Script" path="res://Scripts/EnemyBullet.gd" id="4_niyq1"]
[ext_resource type="Script" path="res://Scripts/VisionLine.gd" id="6_hhrk4"]
[ext_resource type="Texture2D" uid="uid://cpy8lyp2f4cv4" path="res://Assets/Enemies/CaretakerLostOne.png" id="7_3sywu"]
[ext_resource type="Texture2D" uid="uid://dace2ycjiig5y" path="res://Assets/Weapons/VoidBlast.png" id="7_7fjrh"]
[ext_resource type="AudioStream" uid="uid://cx8hgyhxyqju6" path="res://Audio/cut.mp3" id="9_oypw4"]
[ext_resource type="AudioStream" uid="uid://chcxpvaououh5" path="res://Audio/punch.mp3" id="10_b8wsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y21y5"]
size = Vector2(715.969, 375.125)

[sub_resource type="CircleShape2D" id="CircleShape2D_t860l"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h8naw"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_rly2m"]
radius = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3m48f"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c51ga"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kmyk"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0w7n"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nkrc"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6n0c"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ausy8"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d4ti"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvaiq"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20c7a"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hxr8"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1366f"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgb8r"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw7bm"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u87ct"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rafd"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbhtl"]
atlas = ExtResource("7_3sywu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtgew"]
atlas = ExtResource("7_3sywu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahm23"]
atlas = ExtResource("7_3sywu")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxa6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m48f")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c51ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kmyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0w7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nkrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6n0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ausy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d4ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvaiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20c7a")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hxr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1366f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgb8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw7bm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u87ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rafd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbhtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtgew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahm23")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[node name="LostOne" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 33
collision_mask = 35
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_btu1y")

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_axr34")
volume_db = -5.197
pitch_scale = 0.45

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("RectangleShape2D_y21y5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t860l")

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 4.71239
script = ExtResource("3_beyl6")

[node name="EnemyBullet" type="Area2D" parent="RayCast2D"]
script = ExtResource("4_niyq1")

[node name="Gunshot" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
rotation = 1.5708
stream = ExtResource("2_axr34")
volume_db = -13.261
pitch_scale = 1.67

[node name="Hit" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
stream = ExtResource("2_4plcv")
volume_db = 0.627
pitch_scale = 0.8

[node name="VisionLine" type="RayCast2D" parent="RayCast2D/EnemyBullet"]
target_position = Vector2(164, -0.000158358)
script = ExtResource("6_hhrk4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.00593, 1.00182)
shape = SubResource("CircleShape2D_h8naw")

[node name="Firerate" type="Timer" parent="RayCast2D/EnemyBullet"]

[node name="VoidBlast" type="Sprite2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(-12.6438, 13.2479)
rotation = 1.5708
scale = Vector2(1.52433, 1.3135)
texture = ExtResource("7_7fjrh")

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_rly2m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.865219, 0.0675863)
scale = Vector2(1.13546, 1.03392)
sprite_frames = SubResource("SpriteFrames_pxa6k")
animation = &"run"
frame_progress = 0.60701

[node name="Cut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_oypw4")
volume_db = -5.754

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_b8wsq")
volume_db = 4.0
pitch_scale = 1.5

[connection signal="dead2" from="." to="RayCast2D" method="_on_criminal_dead_2"]
[connection signal="dead2" from="." to="RayCast2D/EnemyBullet" method="_on_criminal_dead_2"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="RayCast2D/EnemyBullet" to="RayCast2D/EnemyBullet" method="_on_body_entered"]
[connection signal="novision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_novision"]
[connection signal="vision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_vision"]
[connection signal="timeout" from="RayCast2D/EnemyBullet/Firerate" to="RayCast2D/EnemyBullet" method="_on_firerate_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
